// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Class Decorators adds static deserialize method and serialize to prototype 1`] = `
Object {
  "boxes": Array [
    Object {
      "depth": 12,
      "height": 8,
      "id": 1,
      "metadata": Object {
        Symbol(mobx administration): ObservableObjectAdministration$$1 {
          "defaultEnhancer": [Function],
          "keysAtom": Atom$$1 {
            "diffValue": 0,
            "isBeingObserved": false,
            "isPendingUnobservation": false,
            "lastAccessedBy": 0,
            "lowestObserverState": -1,
            "name": "ObservableObject@12.keys",
            "observers": Set {},
          },
          "name": "ObservableObject@12",
          "pendingKeys": Map {
            "$$typeof" => false,
            "nodeType" => false,
            "@@__IMMUTABLE_ITERABLE__@@" => false,
            "@@__IMMUTABLE_RECORD__@@" => false,
            "_isMockFunction" => false,
            "toJSON" => false,
          },
          "proxy": [Circular],
          "target": Object {
            Symbol(mobx administration): [Circular],
          },
          "values": Map {},
        },
      },
      "sides": Array [],
      "vessel": undefined,
      "watercraft": undefined,
      "width": 8,
    },
  ],
  "id": 42,
  "location": "mid-ship",
  "name": "TV1",
  "tags": Array [],
}
`;

exports[`Class Decorators adds update method to prototype 1`] = `
Object {
  "container": Object {
    "boxes": Array [],
    "id": 1,
    "location": "Building #1",
    "name": "#12",
    "tags": Array [],
  },
  "depth": 12,
  "height": 4,
  "id": 2,
  "metadata": Object {
    Symbol(mobx administration): ObservableObjectAdministration$$1 {
      "defaultEnhancer": [Function],
      "keysAtom": Atom$$1 {
        "diffValue": 0,
        "isBeingObserved": false,
        "isPendingUnobservation": false,
        "lastAccessedBy": 0,
        "lowestObserverState": -1,
        "name": "ObservableObject@61.keys",
        "observers": Set {},
      },
      "name": "ObservableObject@61",
      "pendingKeys": Map {
        "$$typeof" => false,
        "nodeType" => false,
        "@@__IMMUTABLE_ITERABLE__@@" => false,
        "@@__IMMUTABLE_RECORD__@@" => false,
        "_isMockFunction" => false,
        "toJSON" => false,
      },
      "proxy": [Circular],
      "target": Object {
        Symbol(mobx administration): [Circular],
      },
      "values": Map {},
    },
  },
  "sides": Array [],
  "vessel": undefined,
  "watercraft": undefined,
  "width": 3,
}
`;

exports[`Class Decorators hasMany 1`] = `
Object {
  "boxes": Array [
    Object {
      "depth": 1,
      "height": 1,
      "id": undefined,
      "metadata": Object {
        Symbol(mobx administration): ObservableObjectAdministration$$1 {
          "defaultEnhancer": [Function],
          "keysAtom": Atom$$1 {
            "diffValue": 0,
            "isBeingObserved": false,
            "isPendingUnobservation": false,
            "lastAccessedBy": 0,
            "lowestObserverState": -1,
            "name": "ObservableObject@96.keys",
            "observers": Set {},
          },
          "name": "ObservableObject@96",
          "pendingKeys": Map {
            "$$typeof" => false,
            "nodeType" => false,
            "@@__IMMUTABLE_ITERABLE__@@" => false,
            "@@__IMMUTABLE_RECORD__@@" => false,
            "_isMockFunction" => false,
            "toJSON" => false,
          },
          "proxy": [Circular],
          "target": Object {
            Symbol(mobx administration): [Circular],
          },
          "values": Map {},
        },
      },
      "sides": Array [],
      "vessel": undefined,
      "watercraft": undefined,
      "width": 1,
    },
    Object {
      "depth": 1,
      "height": 1,
      "id": undefined,
      "metadata": Object {
        Symbol(mobx administration): ObservableObjectAdministration$$1 {
          "defaultEnhancer": [Function],
          "keysAtom": Atom$$1 {
            "diffValue": 0,
            "isBeingObserved": false,
            "isPendingUnobservation": false,
            "lastAccessedBy": 0,
            "lowestObserverState": -1,
            "name": "ObservableObject@100.keys",
            "observers": Set {},
          },
          "name": "ObservableObject@100",
          "pendingKeys": Map {
            "$$typeof" => false,
            "nodeType" => false,
            "@@__IMMUTABLE_ITERABLE__@@" => false,
            "@@__IMMUTABLE_RECORD__@@" => false,
            "_isMockFunction" => false,
            "toJSON" => false,
          },
          "proxy": [Circular],
          "target": Object {
            Symbol(mobx administration): [Circular],
          },
          "values": Map {},
        },
      },
      "sides": Array [],
      "vessel": undefined,
      "watercraft": undefined,
      "width": 4,
    },
  ],
  "id": 1,
  "location": "z1",
  "name": "C23",
  "tags": Array [],
}
`;

exports[`Class Decorators works with belongsTo 1`] = `
Object {
  "container": Object {
    "boxes": Array [],
    "id": 1,
    "location": "Building #1",
    "name": "#12",
    "tags": Array [],
  },
  "depth": 12,
  "height": 4,
  "id": 32,
  "metadata": Object {
    Symbol(mobx administration): ObservableObjectAdministration$$1 {
      "defaultEnhancer": [Function],
      "keysAtom": Atom$$1 {
        "diffValue": 0,
        "isBeingObserved": false,
        "isPendingUnobservation": false,
        "lastAccessedBy": 0,
        "lowestObserverState": -1,
        "name": "ObservableObject@70.keys",
        "observers": Set {},
      },
      "name": "ObservableObject@70",
      "pendingKeys": Map {
        "$$typeof" => false,
        "nodeType" => false,
        "@@__IMMUTABLE_ITERABLE__@@" => false,
        "@@__IMMUTABLE_RECORD__@@" => false,
        "_isMockFunction" => false,
        "toJSON" => false,
      },
      "proxy": [Circular],
      "target": Object {
        Symbol(mobx administration): [Circular],
      },
      "values": Map {},
    },
  },
  "sides": Array [],
  "vessel": undefined,
  "watercraft": undefined,
  "width": 3,
}
`;
